# amdgpuinfo

./: .gitlab-ci.yml  Makefile  README.md  amdgpuinfo.c  amdmeminfo.c  meson.build
